Lab6 Gateway/yaml/lab6-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab6-v1-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: lab6-pod
      version: v1
  template:
    metadata:
      labels:
        app: lab6-pod
        version: v1
    spec:
      containers:
      - name: lab6-container
        image: {repo}:lab6
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab6-v2-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: lab6-pod
      version: v2
  template:
    metadata:
      labels:
        app: lab6-pod
        version: v2
    spec:
      containers:
      - name: lab6-container
        image: {repo}:lab6
        ports:
        - containerPort: 80
