Lab6 Gateway/yaml/lab6-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab6-v1-svc
spec:
  selector:
    app: lab6-pod
    version: v1
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: lab6-v2-svc
spec:
  selector:
    app: lab6-pod
    version: v2
  ports:
  - port: 80
    targetPort: 80
