Lab6 Gateway/yaml/lab6-pathrouting.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lab6-path-route
spec:
  parentRefs:
  - name: lab6-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /v1
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: lab6-v1-svc
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /v2
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /    
    backendRefs:
    - name: lab6-v2-svc
      port: 80
