Lab6 Gateway/yaml/lab6-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lab6-redirect-route
spec:
  parentRefs:
  - name: lab6-gateway
  rules:
  - matches:
    - path:
        type: Exact
        value: /old-web
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    filters:
    - type: RequestRedirect
      requestRedirect:
        path:
          type: ReplaceFullPath
          replaceFullPath: /v2
        statusCode: 301
