Lab6 Gateway/yaml/lab6-rewrite.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lab6-rewrite-route
spec:
  parentRefs:
  - name: lab6-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/v2
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: lab6-v2-svc
      port: 80
