Lab6 Gateway/yaml/lab6-weight-split.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lab6-weight-split-route
spec:
  parentRefs:
  - name: lab6-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /split
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: lab6-v1-svc
      port: 80
      weight: 80
    - name: lab6-v2-svc
      port: 80
      weight: 20
